--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "pertemuan5",
+  "name": "radiosparkx",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -12,9 +12,12 @@
   "type": "commonjs",
   "dependencies": {
     "bcryptjs": "^3.0.2",
-    "body-parser": "^1.20.3",
+    "body-parser": "^2.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.7",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2"
+    "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
+    "mysql": "^2.18.1",
+    "mysql2": "^3.14.0"
   }
 }
